# Soundboard

./: CMakeLists.txt  CMakePresets.json  LICENSE
src/: app.cpp  app.h  backend.h  common.h  event.cpp  event.h  log.h  main.cpp  render.h
src/backends/glfw/: app_backend.cpp  event_types.h  glfw_backend.h  render.cpp
src/backends/sdl2/: _app_backend.h  app_backend.cpp  event_backend.cpp  event_types.h  render.cpp  render_texture.cpp  sdl2_backend.h
src/backends/sfml/: _app_backend.h  app_backend.cpp  event_backend.cpp  render.cpp
